--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
  <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
     <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
-<p>I&rsquo;m thrilled that you&rsquo;ve taken the time to visit and explore my portfolio. You can checkout my <a href="https://nkishan.com/post/">projects</a>, <a href="https://nkishan.com/work/">work experience</a>, <a href="https://github.com/kishan92">GitHub</a> contributions, and <a href="https://leetcode.com/nkishan/">LeetCode</a> profile. Let&rsquo;s connect on <a href="https://www.linkedin.com/in/kishan-nagendra-profile/">LinkedIn</a> to stay updated on my latest ventures.</p>
+<p>I&rsquo;m thrilled that you&rsquo;ve taken the time to visit and explore my portfolio. You can checkout my <a href="https://nkishan.com/post/">projects</a>, <a href="https://nkishan.com/work/">work experience</a>, <a href="https://github.com/kishann">GitHub</a> contributions, and <a href="https://leetcode.com/nkishan/">LeetCode</a> profile. Let&rsquo;s connect on <a href="https://www.linkedin.com/in/kishan-nagendra-profile/">LinkedIn</a> to stay updated on my latest ventures.</p>
 <!-- raw HTML omitted -->
 
   </article>
