--- a/contact/index.html
+++ b/contact/index.html
@@ -131,7 +131,7 @@
 <ul>
 <li>Email: <a href="mailto:kishann@uw.edu">kishann@uw.edu</a></li>
 <li>LinkedIn: <a href="https://www.linkedin.com/in/kishan-nagendra-profile/">Kishan Nagendra</a></li>
-<li>GitHub: <a href="https://github.com/kishan92">kishan92</a></li>
+<li>GitHub: <a href="https://github.com/kishann">kishann</a></li>
 <li>LeetCode: <a href="https://leetcode.com/nkishan/">nkishan</a></li>
 </ul>
 <p>If you prefer a more traditional form of communication, you can also fill out the contact form below and I&rsquo;ll get back to you as soon as I can.</p>
