--- a/work/project-6/index.html
+++ b/work/project-6/index.html
@@ -182,7 +182,7 @@
 </ul>
 <h2 id="authors">Authors</h2>
 <ul>
-<li><a href="https://github.com/kishan92">@kishan92</a></li>
+<li><a href="https://github.com/kishann">@kishann</a></li>
 <li><a href="https://www.linkedin.com/in/kishan-nagendra-profile/">LinkedIn</a></li>
 </ul>
 <ul class="pa0">
